--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -279,8 +279,8 @@
                             <div class="col-8">
                                 <ng-container *ngIf="!existingCustomerData?.customerDetails?.kycDetails">
                                     <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'panCardFileId'"
-                                        [fileAcceptType]="'image/*'" [action]="'remove'" (upload)="uploadImage($event)"
-                                        (remove)="removeImage($event)">
+                                        [fileAcceptType]="'image/x-png,image/jpeg,image/jpg'" [action]="'remove'"
+                                        (upload)="uploadImage($event)" (remove)="removeImage($event)">
                                     </kt-uplod-preview-image>
                                     <input type="text" formControlName="panCardFileId" class="form-control"
                                         [class.isError]="controls.panCardFileId.touched && controls.panCardFileId.invalid"
