--- a/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.html
@@ -22,6 +22,10 @@
                             <img class="productGridImage"
                                 [src]="product.productImage != '0' ? product?.productImage: 'assets/media/icons/image-placeholder.png'"
                                 alt="test">
+                            <div class="middle">
+                                <kt-button [value]='"Quick View"' [type]='"button"' (action)="view(product.id)"
+                                    class="kt-padding-r-5"></kt-button>
+                            </div>
                         </div>
                         <div class="text-color customer-id font-weight-bold mt-2">{{product.productName}}</div>
                         <p>Weight: {{product.weight}} GMS</p>
@@ -40,13 +44,18 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-2 d-flex align-items-center justify-content-center">
+                                <div
+                                    class="col-md-2 productListImageDiv d-flex align-items-center justify-content-center">
                                     <img class="productListImage"
                                         [src]="product.productImage != '0' ? product?.productImage: 'assets/media/icons/image-placeholder.png'"
                                         alt="test">
+                                    <div class="middle">
+                                        <kt-button [value]='"Quick View"' [type]='"button"' (action)="view(product.id)"
+                                            class="kt-padding-r-5"></kt-button>
+                                    </div>
                                 </div>
                                 <div class="col-md-8">
-                                    <p class="text-color customer-id font-weight-bold">
+                                    <p class="text-color font-weight-bold">
                                         {{product.productName | titlecase}}
                                     </p>
                                     <div class="row">
