--- a/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.scss
@@ -31,7 +31,7 @@
     }
     .customer-id {
         margin-bottom: 0.5rem;
-        min-height: 3rem;
+        min-height: 5rem;
     }
     .card {
         position     : relative;
@@ -50,18 +50,54 @@
         border-radius: 15px;
         border: 1px solid #ebedf2;
     }
+    .productListImageDiv {
+        position: relative;
+    }
     .productListImage {
         max-width: 100px;
         max-height: 100px;
+        opacity: 1;
+        display: block;
+        transition: .5s ease;
+        backface-visibility: hidden;
     }
     .productGridImageDiv {
         min-width: 150px;
         min-height: 150px;
+        position: relative;
     }
     .productGridImage {
         max-width: 150px;
         max-height: 150px;
+        opacity: 1;
+        display: block;
+        transition: .5s ease;
+        backface-visibility: hidden;
     }
+    .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+      }
+      .productGridImageDiv:hover .productGridImage {
+        opacity: 0.3;
+      }
+      
+      .productGridImageDiv:hover .middle {
+        opacity: 1;
+      }
+      .productListImageDiv:hover .productListImage {
+        opacity: 0.3;
+      }
+      
+      .productListImageDiv:hover .middle {
+        opacity: 1;
+      }
     mat-paginator.mat-paginator.paginator--centered {
         display: flex;
         justify-content: center;
