--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
@@ -4,14 +4,14 @@
     }
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 130% !important;
+        width: 135% !important;
     }
     .mat-column-fullName{
         flex: 0 0 11% !important;
         padding-left: 5px !important;
     }
     .mat-column-view{
-        flex: 0 0 6% !important;
+        flex: 0 0 4% !important;
     }
     .mat-column-pan{
         flex: 0 0 7% !important;
@@ -26,22 +26,25 @@
         flex: 0 0 9% !important;
     }
     .mat-column-pincode{
-        flex: 0 0 7% !important;
+        flex: 0 0 6% !important;
     }
     .mat-column-date{
-        flex: 0 0 8% !important;
+        flex: 0 0 7% !important;
     }
     .mat-column-status{
         flex: 0 0 8% !important;
     }
     .mat-column-kycStatus{
+        flex: 0 0 7% !important;
+    }
+    .mat-column-appraiser{
         flex: 0 0 8% !important;
     }
     .border-apply{
         border: 1px solid !important;
     }
     .mat-column-kyc{
-        flex: 0 0 8% !important;
+        flex: 0 0 7% !important;
     }
     .mat-column-actions{
         flex: 0 0 6% !important;
