--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -118,6 +118,18 @@
                             View</div>
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="appraiser">
+                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                    <mat-cell *matCellDef="let lead">
+                        <ng-container *ngIf="lead.status.id == '1'">
+                            <div [ngStyle]="{'display': 'inherit'}">
+                                <button (click)="assign(lead)" class="apply-kyc"
+                                    *ngxPermissionsOnly="['customerKycAdd']">Assign Appraiser</button>
+                            </div>
+                        </ng-container>
+
+                    </mat-cell>
+                </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 
