--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/pay-interset-emi/pay-interset-emi.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/pay-interset-emi/pay-interset-emi.component.html
@@ -39,19 +39,98 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>dfhdfgh</td>
-                        <td>dgfsddf</td>
-                        <td>sdfsdf</td>
-                        <td>dfhdfgh</td>
-                        <td>dgfsddf</td>
-                        <td>sdfsdf</td>
-                        <td>sdfsdf</td>
-                        <td>gdfh</td>
+                        <td>
+                            <div class="position-relative">
+                                <label class="custom-checkbox">
+                                    <span class="label-checkbox"></span>
+                                    <input type="checkbox" (change)="actionChange()">
+                                    <span class="checkmark top-0 checkmark-change"></span>
+                                </label>
+                            </div>
+
+                        </td>
+                        <td class="text-gray">dgfsddf</td>
+                        <td class="text-gray">sdfsdf</td>
+                        <td class="text-gray">dfhdfgh</td>
+                        <td class="text-gray">dgfsddf</td>
+                        <td class="text-gray">sdfsdf</td>
+                        <td class="text-gray">sdfsdf</td>
+                        <td class="text-gray">gdfh</td>
                     </tr>
                 </tbody>
             </table>
         </div>
 
+        <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
+            <div class="col-6 text-center">
+                <kt-button [value]="'Pay EMI'" [type]="'button'"></kt-button>
+                <span class="kt-padding-5 "></span>
+                <kt-button [value]="'View Interest EMI Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
+
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
+            <div class="col-8">
+                <div class="row border-style">
+                    <div class="col-3 form-label">
+                        <label for="" class="font-weight-500 m-0">Payable Amount</label>
+                    </div>
+                    <div class="col-2 form-label">
+                        <label for="" class="font-weight-500 m-0">54000</label>
+                    </div>
+                    <div class="col-4 form-label">
+                        <label for="" class="font-weight-500 m-0">Interest Payment Amount</label>
+                    </div>
+                    <div class="col-3 font-weight-500">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center kt-padding-t-25">
+            <div class="col-6 text-center">
+                <kt-button [value]="'Proceed'" [type]="'button'"></kt-button>
+                <span class="kt-padding-5"></span>
+                <kt-button [value]="'Cancel'" [type]="'reset'"></kt-button>
+
+            </div>
+        </div>
+        <h5 class="kt-padding-t-20 kt-padding-b-20">Payment Confirmation</h5>
+        <div class="table-div">
+            <table class="table outer-border">
+                <thead>
+                    <th class="transparent">Loan ID</th>
+                    <th class="transparent">Loan Payment Date</th>
+                    <th class="transparent">Loan Amount</th>
+                    <th class="transparent">Interest Payment Amount</th>
+                    <th class="transparent">Total Payment Amount</th>
+                    <th class="transparent">Select Payment option</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="text-gray">dgfsddf</td>
+                        <td class="text-gray">sdfsdf</td>
+                        <td class="text-gray">dfhdfgh</td>
+                        <td class="text-gray">dgfsddf</td>
+                        <td class="text-gray">sdfsdf</td>
+                        <td class="text-gray">
+                            <select name="" id="" class="form-control"></select>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="row justify-content-center kt-padding-t-15 kt-padding-b-15">
+            <div class="col-6 text-center">
+                <kt-button [value]="'Confirm'" [type]="'button'"></kt-button>
+                <span class="kt-padding-5 "></span>
+                <kt-button [value]="'Cancel'" [type]="'reset'"></kt-button>
+                <div class="kt-padding-t-5"> <i>On clicking confirm you will be redirected to available payment options.</i> </div>
+            </div>
+        </div>
 
     </kt-portlet-body>
 </kt-portlet>
