--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/dashboard/dashboard.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/dashboard/dashboard.component.html
@@ -1,199 +1,204 @@
-<div class="row">
-    <div class="col-xl-6">
-        <div class="row row-full-height">
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <kt-portlet [class]="'kt-portlet--height-fluid-half kt-portlet--border-bottom-brand'">
-                    <kt-portlet-body [class]="'kt-portlet__body--fluid'">
-                        <kt-widget26 [value]="570" [desc]="'Total Sales'" [options]="chartOptions1"></kt-widget26>
-                    </kt-portlet-body>
-                </kt-portlet>
-
-                <div class="kt-space-20"></div>
-
-                <kt-portlet [class]="'kt-portlet--height-fluid-half kt-portlet--border-bottom-brand'">
-                    <kt-portlet-body [class]="'kt-portlet__body--fluid'">
-                        <kt-widget26 [value]="640" [desc]="'Completed Transactions'" [options]="chartOptions2">
-                        </kt-widget26>
-                    </kt-portlet-body>
-                </kt-portlet>
-            </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <kt-portlet [class]="'kt-portlet--height-fluid-half kt-portlet--border-bottom-brand'">
-                    <kt-portlet-body [class]="'kt-portlet__body--fluid'">
-                        <kt-widget26 [value]="'234+'" [desc]="'Transactions'" [options]="chartOptions3"></kt-widget26>
-                    </kt-portlet-body>
-                </kt-portlet>
-
-                <div class="kt-space-20"></div>
-
-                <kt-portlet [class]="'kt-portlet--height-fluid-half kt-portlet--border-bottom-brand'">
-                    <kt-portlet-body [class]="'kt-portlet__body--fluid'">
-                        <kt-widget26 [value]="'4.4M$'" [desc]="'Paid Comissions'" [options]="chartOptions4">
-                        </kt-widget26>
-                    </kt-portlet-body>
-                </kt-portlet>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-6">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Order Statistics'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-widget12></kt-widget12>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-</div>
-
-
 <kt-portlet>
-    <kt-portlet-body [class]="'kt-portlet__body--fit'">
-        <div class="row row-no-padding row-col-separator-xl">
-            <div class="col-xl-4">
-                <kt-widget1></kt-widget1>
+    <kt-portlet-body [class]="'kt-portlet__body--fit'" *ngIf="dashboardDetails$ | async as details">
+        <div>
+            <h4>Today's Booked Orders</h4>
+            <hr>
+            <div class="row">
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Orders</p>
+                    <h3>{{details?.emiTodaysOrders?.totalOrder ? details?.emiTodaysOrders?.totalOrder : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Jewellery Orders</p>
+                    <h3>{{details?.emiTodaysOrders?.Jewellerycount ? details?.emiTodaysOrders?.Jewellerycount : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Gold Orders</p>
+                    <h3>{{details?.emiTodaysOrders?.Goldcount ? details?.emiTodaysOrders?.Goldcount : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Silver Orders</p>
+                    <h3>{{details?.emiTodaysOrders?.Silvercount ? details?.emiTodaysOrders?.Silvercount : '00'}}</h3>
+                </div>
             </div>
-            <div class="col-xl-4">
-                <kt-widget14 [title]="'Daily Sales'" [desc]="'Check out each collumn for more details'"></kt-widget14>
+            <div class="row mt-4">
+                <div class="col-3">
+                    <p class="font-weight-500">Weight (grams)</p>
+                    <h3>{{details?.emiTodaysOrders?.totalOrderWeight ? details?.emiTodaysOrders?.totalOrderWeight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Jewellery Weight (grams)</p>
+                    <h3>{{details?.emiTodaysOrders?.Jewelleryweight ? details?.emiTodaysOrders?.Jewelleryweight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Gold Weight (grams)</p>
+                    <h3>{{details?.emiTodaysOrders?.Goldweight ? details?.emiTodaysOrders?.Goldweight : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Silver Weight (grams)</p>
+                    <h3>{{details?.emiTodaysOrders?.Silverweight ? details?.emiTodaysOrders?.Silverweight : '00'}}</h3>
+                </div>
             </div>
-            <div class="col-xl-4">
-                <kt-widget14 [title]="'Revenue Change'" [desc]="'Revenue change breakdown by cities'"></kt-widget14>
+            <h4 class="mt-5">Last Month Orders
+                ({{details.emilastMonthsOrders.date.fromDate | date:'mediumDate'}}&nbsp;to&nbsp;{{details.emilastMonthsOrders.date.toDate | date:'mediumDate'}})
+            </h4>
+            <hr>
+            <div class="row">
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Orders</p>
+                    <h3>{{details?.emilastMonthsOrders?.totalOrder ? details?.emilastMonthsOrders?.totalOrder : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Jewellery Orders</p>
+                    <h3>{{details?.emilastMonthsOrders?.Jewellerycount ? details?.emilastMonthsOrders?.Jewellerycount : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Gold Orders</p>
+                    <h3>{{details?.emilastMonthsOrders?.Goldcount ? details?.emilastMonthsOrders?.Goldcount : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Silver Orders</p>
+                    <h3>{{details?.emilastMonthsOrders?.Silvercount ? details?.emilastMonthsOrders?.Silvercount : '00'}}
+                    </h3>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-3">
+                    <p class="font-weight-500">Weight (grams)</p>
+                    <h3>{{details?.emilastMonthsOrders?.totalOrderWeight ? details?.emilastMonthsOrders?.totalOrderWeight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Jewellery Weight (grams)</p>
+                    <h3>{{details?.emilastMonthsOrders?.Jewelleryweight ? details?.emilastMonthsOrders?.Jewelleryweight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Gold Weight (grams)</p>
+                    <h3>{{details?.emilastMonthsOrders?.Goldweight ? details?.emilastMonthsOrders?.Goldweight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Silver Weight (grams)</p>
+                    <h3>{{details?.emilastMonthsOrders?.Silverweight ? details?.emilastMonthsOrders?.Silverweight : '00'}}
+                    </h3>
+                </div>
+            </div>
+            <h4 class="mt-5">Till Date Orders</h4>
+            <hr>
+            <div class="row">
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Orders</p>
+                    <h3>{{details?.emitillDateOrders?.totalOrder ? details?.emitillDateOrders?.totalOrder : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Jewellery Orders</p>
+                    <h3>{{details?.emitillDateOrders?.Jewellerycount ? details?.emitillDateOrders?.Jewellerycount : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Gold Orders</p>
+                    <h3>{{details?.emitillDateOrders?.Goldcount ? details?.emitillDateOrders?.Goldcount : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Silver Orders</p>
+                    <h3>{{details?.emitillDateOrders?.Silvercount ? details?.emitillDateOrders?.Silvercount : '00'}}
+                    </h3>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-3">
+                    <p class="font-weight-500">Weight (grams)</p>
+                    <h3>{{details?.emitillDateOrders?.totalOrderWeight ? details?.emitillDateOrders?.totalOrderWeight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Jewellery Weight (grams)</p>
+                    <h3>{{details?.emitillDateOrders?.Jewelleryweight ? details?.emitillDateOrders?.Jewelleryweight : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Gold Weight (grams)</p>
+                    <h3>{{details?.emitillDateOrders?.Goldweight ? details?.emitillDateOrders?.Goldweight : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Silver Weight (grams)</p>
+                    <h3>{{details?.emitillDateOrders?.Silverweight ? details?.emitillDateOrders?.Silverweight : '00'}}
+                    </h3>
+                </div>
+            </div>
+            <h4 class="mt-5">Total Booked Orders</h4>
+            <hr>
+            <div class="row">
+                <div class="col-3">
+                    <p class="font-weight-500">No. of Orders</p>
+                    <h3>{{details?.emiTotalOrders?.noOfOrders ? details?.emiTotalOrders?.noOfOrders : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Booked</p>
+                    <h3>{{details?.emiTotalOrders?.booked ? details?.emiTotalOrders?.booked : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Processing</p>
+                    <h3>{{details?.emiTotalOrders?.processing ? details?.emiTotalOrders?.processing : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Payment Completed</p>
+                    <h3>{{details?.emiTotalOrders?.paymentComplete ? details?.emiTotalOrders?.paymentComplete : '00'}}
+                    </h3>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-3">
+                    <p class="font-weight-500">Defaulters</p>
+                    <h3>{{details?.emiTotalOrders?.defaulter ? details?.emiTotalOrders?.defaulter : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Dispatched to Client</p>
+                    <h3>{{details?.emiTotalOrders?.dispatchToClint ? details?.emiTotalOrders?.dispatchToClint : '00'}}
+                    </h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Delivered to Client</p>
+                    <h3>{{details?.emiTotalOrders?.delivered ? details?.emiTotalOrders?.delivered : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Cancel Order</p>
+                    <h3>{{details?.emiTotalOrders?.cancel ? details?.emiTotalOrders?.cancel : '00'}}</h3>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-3">
+                    <p class="font-weight-500">Active Order</p>
+                    <h3>{{details?.emiTotalOrders?.active ? details?.emiTotalOrders?.active : '00'}}</h3>
+                </div>
+            </div>
+            <h4 class="mt-5">Customers</h4>
+            <hr>
+            <div class="row">
+                <div class="col-3">
+                    <p class="font-weight-500">Total</p>
+                    <h3>{{details?.emiCustomer?.totalCustomer ? details?.emiCustomer?.totalCustomer : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Defaulters</p>
+                    <h3>{{details?.emiCustomer?.defaulterData ? details?.emiCustomer?.defaulterData : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Overdue</p>
+                    <h3>{{details?.emiCustomer?.overDuedata ? details?.emiCustomer?.overDuedata : '00'}}</h3>
+                </div>
+                <div class="col-3">
+                    <p class="font-weight-500">Overdue Amount</p>
+                    <h3>{{details?.emiCustomer?.overDueAmount ? details?.emiCustomer?.overDueAmount : '00'}}</h3>
+                </div>
             </div>
         </div>
     </kt-portlet-body>
 </kt-portlet>
-
-
-<div class="row">
-    <div class="col-xl-4">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Download Files'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-widget4 [data]="widget4_1">
-                    <ng-template #actionTemplate let-item="item">
-                        <div class="kt-widget4__tools">
-                            <a href="javascript:;" class="btn btn-clean btn-icon btn-sm">
-                                <i class="flaticon2-download-symbol-of-down-arrow-in-a-rectangle"></i>
-                            </a>
-                        </div>
-                    </ng-template>
-                </kt-widget4>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-    <div class="col-xl-4">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'New Users'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-widget4 [data]="widget4_2">
-                    <ng-template #actionTemplate let-item="item">
-                        <a href="javascript:;" class="btn btn-sm" [ngClass]="item.buttonClass">Follow</a>
-                    </ng-template>
-                </kt-widget4>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-    <div class="col-xl-4">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Latest Updates'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-widget4 [data]="widget4_3">
-                    <ng-template #actionTemplate let-item="item">
-                        <span class="kt-widget4__number" [ngClass]="item.valueColor">{{item.value}}</span>
-                    </ng-template>
-                </kt-widget4>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="col-xl-8">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Exclusive Datatable'"
-                [class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu></kt-context-menu>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body [class]="'kt-portlet__body--fit'">
-                <kt-data-table></kt-data-table>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-    <div class="col-xl-4">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Authors Profit'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-widget4 [data]="widget4_4">
-                    <ng-template #actionTemplate let-item="item">
-                        <span class="kt-widget4__number" [ngClass]="item.valueColor">{{item.value}}</span>
-                    </ng-template>
-                </kt-widget4>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="col-xl-8">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Best Sellers'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-widget5></kt-widget5>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-    <div class="col-xl-4">
-        <kt-portlet [class]="'kt-portlet--height-fluid'">
-            <kt-portlet-header [title]="'Recent Activities'">
-                <ng-container ktPortletTools>
-                    <kt-context-menu2></kt-context-menu2>
-                </ng-container>
-            </kt-portlet-header>
-            <kt-portlet-body>
-                <kt-timeline2></kt-timeline2>
-            </kt-portlet-body>
-        </kt-portlet>
-    </div>
-</div>
-
-
-<!--
-<kt-portlet>
-	<kt-portlet-header>
-		<ng-container ktPortletTitle>
-		</ng-container>
-		<ng-container ktPortletTools>
-		</ng-container>
-	</kt-portlet-header>
-	<kt-portlet-body></kt-portlet-body>
-	<kt-portlet-footer></kt-portlet-footer>
-</kt-portlet>
--->
