--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -330,7 +330,7 @@
                         </div>
                         <div class="col-4">
                             <label class="font-weight-bold">
-                                {{controls.unsceuredschemeInterest.value}}%
+                                {{controls.unsceuredInterestRate.value}}%
                             </label>
                         </div>
                     </div>
