--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -1,11 +1,11 @@
+<!-- <kt-modal-header *ngIf="!viewOnly" [title]='"KYC Details"' (action)="action()"></kt-modal-header> -->
 <div class="kt-padding-l-10">
     <mat-tab-group [formGroup]="ornamentsForm" class="position-relative" [(selectedIndex)]="selected">
-        <mat-tab  formArrayName="ornamentData"
-            *ngFor="let ornament of OrnamentsData.controls;index as idx">
+        <mat-tab formArrayName="ornamentData" *ngFor="let ornament of OrnamentsData.controls;index as idx">
             <ng-template mat-tab-label>
                 Ornaments {{idx+1}}
-                <img *ngIf="OrnamentsData.length > 1" class="removeImageSize kt-padding-l-5 kt-pointer" [src]="'assets/media/icons/cancel.png'"
-                (click)="deleteOrnaments(idx)" />
+                <img *ngIf="OrnamentsData.length > 1" class="removeImageSize kt-padding-l-5 kt-pointer"
+                    [src]="'assets/media/icons/cancel.png'" (click)="deleteOrnaments(idx)" />
             </ng-template>
             <ng-template mat-tab-body>
 
