--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -254,11 +254,10 @@
                     <div class="col-6 pl-4">
                         <div class="row">
                             <div class="col-4 align-self-center">
-                                <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">PAN Card
-                                    Name</label>
+                                <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">PAN Card Holder Name</label>
                             </div>
                             <div class="col-8">
-                                <input type="text" aria-label="PAN Card Name" placeholder="PAN Card Name"
+                                <input type="text" aria-label="PAN Card Holder Name" placeholder="PAN Card Holder Name"
                                     class="form-control" formControlName="nameOnPanCard"
                                     [class.isError]="controls.nameOnPanCard.touched && controls.nameOnPanCard.invalid">
                                 <mat-error
